# interview-frontend

backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/src/middleware/: auth.py
backend/src/routes/: actors.py  addresses.py  auth.py  categories.py  cities.py  countries.py  customers.py  films.py  inventory.py  languages.py  payments.py  rentals.py  staff.py  stores.py  views.py
backend/src/schemas/: actor.py  address.py  category.py  city.py  country.py  customer.py  film.py  film_actor.py  film_category.py  inventory.py  language.py  payment.py  rental.py  staff.py  store.py  views.py
backend/src/utils/: database.py
frontend/: package.json
frontend/src/: App.tsx
