[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Daisee DVD Rentals Backend"
authors = ["Charles Sengupta <cjsengupta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
